Manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
spec:
  replica: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
       name: frontend
       labels:
         app: frontend
    spec:
      containers:
        - name: frontend
          image:  ruxs123/frontend:latest
          ports:
           - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata: 
  name: frontend-service
spec:
  type: ClusterIp
  seclector:
     app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
