Manifest/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: user-deployment
spec:
  replica: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
       name: user
       labels:
         app: user
    spec:
      containers:
        - name: user
          image:  ruxs123/user:latest
          ports:
           - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata: 
  name: user-service
spec:
  type: ClusterIp
  seclector:
     app: user
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
